[profile.release]
lto = true
opt-level = 3


[workspace]
members = [
    "downloader",
    "parser",
    "emitter",
    "html_extractor",

"output/access_analyzer",
"output/acmpca",
"output/amazon_mq",
"output/amplify",
"output/amplify_uibuilder",
"output/api_gateway",
"output/api_gateway_v2",
"output/app_config",
"output/app_flow",
"output/application_auto_scaling",
"output/application_insights",
"output/app_mesh",
"output/app_runner",
"output/app_stream",
"output/app_sync",
"output/aps",
"output/ask",
"output/athena",
"output/audit_manager",
"output/auto_scaling",
"output/auto_scaling_plans",
"output/backup",
"output/backup_gateway",
"output/batch",
"output/budgets",
"output/cassandra",
"output/ce",
"output/certificate_manager",
"output/chatbot",
"output/cloud9",
"output/cloud_formation",
"output/cloud_front",
"output/cloud_trail",
"output/cloud_watch",
"output/code_artifact",
"output/code_build",
"output/code_commit",
"output/code_deploy",
"output/code_guru_profiler",
"output/code_guru_reviewer",
"output/code_pipeline",
"output/code_star",
"output/code_star_connections",
"output/code_star_notifications",
"output/cognito",
"output/comprehend",
"output/config",
"output/control_tower",
"output/data_brew",
"output/data_pipeline",
"output/data_sync",
"output/dax",
"output/detective",
"output/dev_ops_guru",
"output/directory_service",
"output/dlm",
"output/dms",
"output/doc_db",
"output/doc_dbelastic",
"output/dynamo_db",
"output/ec2",
"output/ecr",
"output/ecs",
"output/efs",
"output/eks",
"output/elasti_cache",
"output/elastic_beanstalk",
"output/elastic_load_balancing",
"output/elastic_load_balancing_v2",
"output/elasticsearch",
"output/emr",
"output/emrcontainers",
"output/emrserverless",
"output/events",
"output/event_schemas",
"output/evidently",
"output/fin_space",
"output/fis",
"output/fms",
"output/forecast",
"output/fraud_detector",
"output/fsx",
"output/game_lift",
"output/global_accelerator",
"output/glue",
"output/grafana",
"output/greengrass",
"output/greengrass_v2",
"output/ground_station",
"output/guard_duty",
"output/health_lake",
"output/iam",
"output/identity_store",
"output/image_builder",
"output/inspector",
"output/inspector_v2",
"output/internet_monitor",
"output/io_t",
"output/io_t1_click",
"output/io_tanalytics",
"output/io_tevents",
"output/io_tfleet_hub",
"output/io_tsite_wise",
"output/kafka_connect",
"output/kendra",
"output/kendra_ranking",
"output/kinesis",
"output/kinesis_analytics",
"output/kinesis_analytics_v2",
"output/kinesis_firehose",
"output/kinesis_video",
"output/kms",
"output/lake_formation",
"output/lambda",
"output/license_manager",
"output/lightsail",
"output/location",
"output/logs",
"output/lookout_metrics",
"output/lookout_vision",
"output/m2",
"output/macie",
"output/managed_blockchain",
"output/media_connect",
"output/media_convert",
"output/media_live",
"output/media_package",
"output/media_tailor",
"output/memory_db",
"output/msk",
"output/mwaa",
"output/neptune",
"output/network_firewall",
"output/network_manager",
"output/oam",
"output/open_search_serverless",
"output/open_search_service",
"output/ops_works",
"output/ops_works_cm",
"output/organizations",
"output/osis",
"output/personalize",
"output/pinpoint",
"output/pipes",
"output/proton",
"output/qldb",
"output/quick_sight",
"output/ram",
"output/rds",
"output/redshift",
"output/redshift_serverless",
"output/refactor_spaces",
"output/rekognition",
"output/resilience_hub",
"output/resource_explorer2",
"output/resource_groups",
"output/robo_maker",
"output/roles_anywhere",
"output/route53",
"output/route53_resolver",
"output/rum",
"output/s3",
"output/s3_object_lambda",
"output/s3_outposts",
"output/sage_maker",
"output/scheduler",
"output/sdb",
"output/secrets_manager",
"output/security_hub",
"output/service_catalog",
"output/service_catalog_app_registry",
"output/service_discovery",
"output/ses",
"output/shield",
"output/signer",
"output/sim_space_weaver",
"output/sns",
"output/sqs",
"output/ssm",
"output/ssmcontacts",
"output/ssmincidents",
"output/sso",
"output/step_functions",
"output/support_app",
"output/synthetics",
"output/systems_manager_sap",
"output/timestream",
"output/transfer",
"output/vpc_lattice",
"output/waf",
"output/wafregional",
"output/wafv2",
"output/work_spaces",
"output/xray",
]
