[package]
name = "emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
downloader = { path = "../downloader" }
html_extractor = { path = "../html_extractor" }
rayon = "1.7.0"
serde_json = "*"
